--- a/MDK-ARM/H26R0.uvprojx
+++ b/MDK-ARM/H26R0.uvprojx
@@ -482,6 +482,16 @@
               <FileType>1</FileType>
               <FilePath>..\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_rtc_ex.c</FilePath>
             </File>
+            <File>
+              <FileName>stm32f0xx_hal_i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\H08R6\h08r6\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_i2c.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f0xx_hal_i2c_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\H08R6\h08r6\Thirdparty\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal_i2c_ex.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -536,6 +546,11 @@
               <FileName>H26R0_uart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\H26R0\H26R0_uart.c</FilePath>
+            </File>
+            <File>
+              <FileName>H26R0_i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\H26R0\H26R0_i2c.c</FilePath>
             </File>
             <File>
               <FileName>startup_stm32f091xc.s</FileName>
