--- a/MDK-ARM/H26R0.uvprojx
+++ b/MDK-ARM/H26R0.uvprojx
@@ -555,7 +555,7 @@
             <File>
               <FileName>startup_stm32f091xc.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\H26R0\startup_stm32f091xc.s</FilePath>
+              <FilePath>..\H26R0\arm\startup_stm32f091xc.s</FilePath>
             </File>
           </Files>
         </Group>
