--- a/STM32CubeIDE/.cproject
+++ b/STM32CubeIDE/.cproject
@@ -49,16 +49,16 @@
 									<listOptionValue builtIn="false" value="H26R0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.237357939" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="../../../Thirdparty/CMSIS/Include"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/CMSIS/Device/ST/STM32F0xx/Include"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/STM32F0xx_HAL_Driver/Inc/Legacy"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/STM32F0xx_HAL_Driver/Inc"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/Middleware/FreeRTOS/Source/include"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/Middleware/FreeRTOS/Source/portable/GCC/ARM_CM0"/>
-									<listOptionValue builtIn="false" value="../../../Thirdparty/Middleware/FreeRTOS/Source/CMSIS_RTOS"/>
-									<listOptionValue builtIn="false" value="../../../H26R0"/>
-									<listOptionValue builtIn="false" value="../../../BOS"/>
-									<listOptionValue builtIn="false" value="../../../User"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/CMSIS/Include"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/CMSIS/Device/ST/STM32F0xx/Include"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/STM32F0xx_HAL_Driver/Inc/Legacy"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/STM32F0xx_HAL_Driver/Inc"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/Middleware/FreeRTOS/Source/include"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/Middleware/FreeRTOS/Source/portable/GCC/ARM_CM0"/>
+									<listOptionValue builtIn="false" value="../../Thirdparty/Middleware/FreeRTOS/Source/CMSIS_RTOS"/>
+									<listOptionValue builtIn="false" value="../../H26R0"/>
+									<listOptionValue builtIn="false" value="../../BOS"/>
+									<listOptionValue builtIn="false" value="../../User"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard.1110342788" name="Language standard" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard" useByScannerDiscovery="false" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard.value.isoc99" valueType="enumerated"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.warnings.all.1677760632" name="Enable all warnings about questionable constructions (-Wall)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.warnings.all" useByScannerDiscovery="false" value="false" valueType="boolean"/>
@@ -88,42 +88,17 @@
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.688729929" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec"/>
 						</toolChain>
 					</folderInfo>
-					<folderInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.378881087.1574563912" name="/" resourcePath="Templates">
-						<toolChain id="com.st.stm32cube.ide.mcu.gnu.managedbuild.toolchain.exe.debug.1786107026" name="MCU ARM GCC" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.toolchain.exe.debug" unusedChildren="">
-							<option id="com.st.stm32cube.ide.mcu.option.internal.toolchain.type.659959638.2004055253" name="Internal Toolchain Type" superClass="com.st.stm32cube.ide.mcu.option.internal.toolchain.type.659959638"/>
-							<option id="com.st.stm32cube.ide.mcu.option.internal.toolchain.version.535728968.2001484810" name="Internal Toolchain Version" superClass="com.st.stm32cube.ide.mcu.option.internal.toolchain.version.535728968"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_mcu.369122352.455925180" name="Mcu" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_mcu.369122352"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_cpuid.499918737.1122197775" name="CpuId" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_cpuid.499918737"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_coreid.2053585773.653813838" name="CpuCoreId" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_coreid.2053585773"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_board.909135967.399465186" name="Board" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.target_board.909135967"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.defaults.2104988692.1677813837" name="Defaults" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.defaults.2104988692"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.runtimelibrary_c.218059358.1057238975" name="Runtime library" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.runtimelibrary_c.218059358"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.converthex.1211284026.1159962808" name="Convert to Intel Hex file (-O ihex)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.converthex.1211284026"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.convertbinary.1188599962.152795133" name="Convert to binary file (-O binary)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.convertbinary.1188599962"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.showsize.95731683.913434515" name="Show size information about built artifact" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.showsize.95731683"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.418920899" name="MCU GCC Assembler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.2050145454"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1502625576" name="MCU GCC Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1335945927"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.343175101" name="MCU G++ Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.908683457"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.linker.892955306" name="MCU GCC Linker" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.linker.727231273"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.470138095" name="MCU G++ Linker" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.1747822938"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.archiver.1109467698" name="MCU GCC Archiver" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.archiver.1950426693"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.size.1239291436" name="MCU Size" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.size.1370279892"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objdump.listfile.1379163561" name="MCU Output Converter list file" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objdump.listfile.98350290"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.hex.121285374" name="MCU Output Converter Hex" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.hex.1754341799"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.binary.1800901653" name="MCU Output Converter Binary" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.binary.1008095452"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.verilog.1771004193" name="MCU Output Converter Verilog" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.verilog.141768535"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.srec.1992188897" name="MCU Output Converter Motorola S-rec" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.srec.2117337984"/>
-							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.1222121147" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.688729929"/>
-						</toolChain>
-					</folderInfo>
 					<sourceEntries>
-						<entry excluding="gcc|Thirdparty/CMSIS/Device/ST/STM32F0xx|Thirdparty/STM32F0xx_HAL_Driver/Src|Thirdparty/CMSIS/RTOS/Template|Thirdparty/CMSIS/Device/ST/STM32F0xx/Source|User|H26R0|BOS" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="BOS"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="H26R0"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Thirdparty/CMSIS/RTOS/Template"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Thirdparty/STM32F0xx_HAL_Driver/Src"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="User"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="gcc"/>
+						<entry excluding="BOS|H26R0|Thirdparty/CMSIS/Device/ST/STM32F0xx/Source|Thirdparty/Middleware/FreeRTOS/Source/CMSIS_RTOS|Thirdparty/Middleware/FreeRTOS/Source/portable/GCC/ARM_CM0|Thirdparty/Middleware/FreeRTOS/Source/portable/MemMang|Thirdparty/STM32F0xx_HAL_Driver/Src|User|gcc|Thirdparty/CMSIS/RTOS/Template" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="BOS"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="H26R0"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/CMSIS/Device/ST/STM32F0xx/Source"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/CMSIS/RTOS/Template"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/Middleware/FreeRTOS/Source/CMSIS_RTOS"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/Middleware/FreeRTOS/Source/portable/GCC/ARM_CM0"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/Middleware/FreeRTOS/Source/portable/MemMang"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Thirdparty/STM32F0xx_HAL_Driver/Src"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="User"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
